SEO & UX optimization: meta tags, mobile nav, accessibility, smooth scroll, back-to-top

--- a/index.html
+++ b/index.html
@@ -1,18 +1,69 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Atharva Gawas | Developer & Cybersecurity Enthusiast</title>
+
+  <!-- Primary Meta Tags -->
   <meta name="description"
-    content="Atharva Gawas — Aspiring Software Developer, CTF Player & Cybersecurity Enthusiast" />
+    content="Atharva Gawas — Aspiring Software Developer, CTF Player & Cybersecurity Enthusiast. Building software with a hacker's mindset." />
+  <meta name="author" content="Atharva Gawas" />
+  <meta name="theme-color" content="#07070d" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://atharvagawas.dev/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://atharvagawas.dev/" />
+  <meta property="og:title" content="Atharva Gawas | Developer & Cybersecurity Enthusiast" />
+  <meta property="og:description"
+    content="Developer. CTF competitor. Passionate about cybersecurity & AI. Building software with a hacker's mindset." />
+  <meta property="og:image" content="https://atharvagawas.dev/og-image.png" />
+  <meta property="og:site_name" content="Atharva Gawas Portfolio" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Atharva Gawas | Developer & Cybersecurity Enthusiast" />
+  <meta name="twitter:description"
+    content="Developer. CTF competitor. Passionate about cybersecurity & AI. Building software with a hacker's mindset." />
+  <meta name="twitter:image" content="https://atharvagawas.dev/og-image.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+  <!-- Fonts: preconnect + load -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500;700&display=swap"
     rel="stylesheet">
-  <title>Atharva Gawas | Portfolio</title>
+
+  <!-- Structured Data: Person Schema -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Atharva Gawas",
+      "url": "https://atharvagawas.dev",
+      "jobTitle": "Software Developer & Cybersecurity Enthusiast",
+      "knowsAbout": ["JavaScript", "React", "Cybersecurity", "CTF", "Node.js", "Python"],
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "SIES Graduate School of Technology"
+      },
+      "sameAs": []
+    }
+  </script>
+
+  <noscript>
+    <style>
+      .app-container {
+        display: block !important;
+      }
+    </style>
+  </noscript>
 </head>
 
 <body>
