fix: prepare for deployment - add OG image and remove hardcoded URLs

--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
   <meta name="author" content="Atharva Gawas" />
   <meta name="theme-color" content="#07070d" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://atharvagawas.dev/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://atharvagawas.dev/" />
   <meta property="og:title" content="Atharva Gawas | Developer & Cybersecurity Enthusiast" />
   <meta property="og:description"
     content="Developer. CTF competitor. Passionate about cybersecurity & AI. Building software with a hacker's mindset." />
-  <meta property="og:image" content="https://atharvagawas.dev/og-image.png" />
+  <meta property="og:image" content="/og-image.png" />
   <meta property="og:site_name" content="Atharva Gawas Portfolio" />
 
   <!-- Twitter Card -->
@@ -28,7 +26,7 @@
   <meta name="twitter:title" content="Atharva Gawas | Developer & Cybersecurity Enthusiast" />
   <meta name="twitter:description"
     content="Developer. CTF competitor. Passionate about cybersecurity & AI. Building software with a hacker's mindset." />
-  <meta name="twitter:image" content="https://atharvagawas.dev/og-image.png" />
+  <meta name="twitter:image" content="/og-image.png" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -46,14 +44,12 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Atharva Gawas",
-      "url": "https://atharvagawas.dev",
       "jobTitle": "Software Developer & Cybersecurity Enthusiast",
       "knowsAbout": ["JavaScript", "React", "Cybersecurity", "CTF", "Node.js", "Python"],
       "alumniOf": {
         "@type": "CollegeOrUniversity",
         "name": "SIES Graduate School of Technology"
-      },
-      "sameAs": []
+      }
     }
   </script>
 
